@@ -9,10 +9,14 @@ Additions:
 -Connect UO compatability
 -Added a "-macro <name>" command to play a macro from inside of the client.
 -A dismount hotkey (in the "Misc" category)
--The "UO Positioning system!"  This is ment to provide similar functionality to UOAutomap and the built-in client Radar display.  On some RunUO servers this display will show members of your party and their names.
+-The "UO Positioning system!"  This is ment to provide similar functionality to UOAutomap and the built-in client Radar display.  On most RunUO servers this display will show members of your party and their names.
 
 Changes/Fixes:
 -Several performance enhancements to the network code.  Especially on encrypted (OSI) servers.
 -Changed the way the welcome screen handles OSI encryption.  You should now always (even when connecting to OSI!) check the "patch encryption" box unless you are using a special client (like one created by UORice).  If you are confused, then always check the "Patch Encryption" box, even when connecting to OSI.
 -Random targets and next target will now ignore mobiles which are more than 12 tiles away.
 -Internal targets (such as the Restock agent) now work from inside of macros
+-Razor internal timers have been revamped.  As a result Razor should overall use less resources now and certain things should be more responsive.
+-As a result of the internal timer changes, Razor Packet Video (RPV) playback should be smoother now, especially when a lot of things are going on at once on-screen.
+-The "Smart Always on Top" feature has been re-vamped and now works bug-free.  It is HIGHLY recommended for everyone.  As a reminder: This feature keeps Razor and the UOPS window "always on top" of the UO window, but they will never be "always on top" of other windows.
+-Several small annoyances have been fixed.
